# REALCompetitionStartingKit

./: LICENSE.md  README.md  calibrate.py  setup.py
docs/: REALCOMP_ENV_SPECS.md
docs/figs/: kuka_full.xcf  kuka_gripper.xcf
install/: b3serv  bullet.patch  install.sh
realcomp/: __init__.py
realcomp/data/kuka_gripper_description/: CMakeLists.txt
realcomp/data/kuka_gripper_description/launch/: display.launch
realcomp/data/kuka_gripper_description/meshes/: cube.blend  finger_0.blend  finger_0.mtl  (+1 more)
realcomp/envs/: __init__.py  realcomp_env.py  realcomp_robot.py
realcomp/examples/: calibrate.py  demo.py  test.py
realcomp/task/: demo.py  demo_extrinsic_only.py  my_controller.py
roboschool/agent_zoo/: RoboschoolKukaObjects_v0_2019feb.py  RoboschoolKuka_v0_2019jen.py  demo_race1.py
roboschool/roboschool/: __init__.py  gym_kuka.py  gym_kuka_objects.py  gym_urdf_robot_env.py
roboschool/roboschool/cpp-household/: physics-bullet.cpp  python-binding.cpp
roboschool/roboschool/models_robot/kuka_gripper_description/: openrviz.sh  package.xml
roboschool/roboschool/models_robot/kuka_gripper_description/meshes/: banana.blend  banana.mtl  base.blend  cube.mtl  finger_0.blend  finger_1.blend  link_2.mtl  link_4.mtl  link_6.mtl  mustard.mtl  orange.blend  orange.mtl  table.blend  table.mtl
roboschool/roboschool/models_robot/kuka_gripper_description/rviz/: urdf.rviz
roboschool/roboschool/models_robot/kuka_gripper_description/urdf/: banana.urdf  cube.urdf  hammer.urdf  kuka_gripper.urdf  mustard.urdf  orange.urdf  shelf.urdf  table.urdf  tomato_soup_can.urdf
(+24 files in other folders)
